    wubildr image, to support our default configuration file.

  [ Jonathan Riddell ]
  * Remove Kubuntu Netbook option, no longer a separate CD
  * Update Kubuntu artwork

  [ Evan Dandrea ]
  * Update translations from Launchpad.
  * Remove Wubi from the Windows Startup folder, if found.
  * Catch IO errors around trying to remove Wubi from the startup folder
    (LP: #771517).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 30 Jun 2010 11:44:43 +0100

wubi (10.10) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Bump to 10.10.
  * GRUB no longer has a 'sh' module; use 'normal' instead.
  * Pass '-O i386-pc' to grub-mkimage, required by GRUB snapshots from
    2010-05-17 onwards.
  * wubildr.cfg needs to be run using GRUB's normal parser rather than its
    rescue parser.  Rather than embedding it directly as a configuration
    file, embed it as a memdisk and add wubildr-bootstrap.cfg which invokes
    it using normal mode (LP: #600578).
  * Import KEY_SET_VALUE in win32 registry module.
  * Remove some unused or duplicate imports.
  * Add the font, gfxterm, and gettext modules to the wubildr image, to
    support our default configuration file (LP: #653134).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 30 Jun 2010 11:44:43 +0100

wubi (10.04) UNRELEASED; urgency=low

  [ Agostino Russo ]
  * Fixed country and keymap detection (LP: #428575)
  * Added Chinese to language selector (LP: #468457)
  * The amd64 URL for Kubuntu was pointing to the i386 ISO (LP: #465936)
  * Boot.ini is not restored if drive letter is in upper case (LP:
    #400936)
  * Added traditional chinese to language list (LP: #468457)
  * Default to English if translations are not available (LP: #469131)
  * Better embedded grub.cfg, previous version was a workaround for a 
    grub2 bug that didn't allow us to test for the existance of a 
    file. That grub bug (rev 1724) has now been fixed.  
  * Bumped preseed suite to lucid
  * Avoid error due to null cd_path (LP: #552357)